<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Bernd Busse
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dialog_vertical_margin"
    android:paddingLeft="@dimen/dialog_horizontal_margin"
    android:paddingRight="@dimen/dialog_horizontal_margin"
    android:paddingTop="@dimen/dialog_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".gui.BodyInputPickerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Empty Container for optional Name EditText -->
        <FrameLayout
            android:id="@+id/body_input_container_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <!-- Sex Spinner -->
        <TextView
            android:id="@+id/body_input_label_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_input_container_name"
            android:text="@string/body_input_label_sex" />

        <Spinner
            android:id="@+id/body_input_spinner_sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_input_label_sex"
            tools:listitem="@android:layout/simple_spinner_item" />

        <!-- Body Weight Input -->
        <TextView
            android:id="@+id/body_input_label_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_input_spinner_sex"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:text="@string/body_input_label_weight" />

        <de.busse_apps.bakcalculator.widget.ClearableEditText
            android:id="@+id/body_input_field_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_input_label_weight"
            android:drawableEnd="@drawable/ic_action_remove"
            android:drawableRight="@drawable/ic_action_remove"
            android:ems="10"
            android:hint="@string/body_input_hint_weight"
            android:inputType="numberDecimal" />

        <!-- Body Height Input -->
        <TextView
            android:id="@+id/body_input_label_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_input_field_weight"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:text="@string/body_input_label_height" />

        <de.busse_apps.bakcalculator.widget.ClearableEditText
            android:id="@+id/body_input_field_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_input_label_height"
            android:drawableEnd="@drawable/ic_action_remove"
            android:drawableRight="@drawable/ic_action_remove"
            android:ems="10"
            android:hint="@string/body_input_hint_height"
            android:inputType="numberDecimal" />

        <!-- Age Input -->
        <TextView
            android:id="@+id/body_input_label_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_input_field_height"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:text="@string/body_input_label_age" />

        <de.busse_apps.bakcalculator.widget.ClearableEditText
            android:id="@+id/body_input_field_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/body_input_label_age"
            android:drawableEnd="@drawable/ic_action_remove"
            android:drawableRight="@drawable/ic_action_remove"
            android:ems="10"
            android:hint="@string/body_input_hint_age"
            android:inputType="numberDecimal" />

    </RelativeLayout>
</ScrollView>
