<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Bernd Busse
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/dialog_vertical_margin"
    android:paddingLeft="@dimen/dialog_horizontal_margin"
    android:paddingRight="@dimen/dialog_horizontal_margin"
    android:paddingTop="@dimen/dialog_vertical_margin"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".gui.DrinkInputPickerFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Drink Volume Input -->
        <TextView
            android:id="@+id/drink_input_label_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:text="@string/drink_input_label_volume" />

        <de.busse_apps.bakcalculator.widget.ClearableEditText
            android:id="@+id/drink_input_field_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drink_input_label_volume"
            android:drawableEnd="@drawable/ic_action_remove"
            android:drawableRight="@drawable/ic_action_remove"
            android:ems="10"
            android:hint="@string/drink_input_hint_volume"
            android:inputType="numberDecimal" />

        <!-- Drink Percent Input -->
        <TextView
            android:id="@+id/drink_input_label_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drink_input_field_volume"
            android:layout_marginTop="@dimen/element_vertical_margin"
            android:text="@string/drink_input_label_percent" />

        <de.busse_apps.bakcalculator.widget.ClearableEditText
            android:id="@+id/drink_input_field_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drink_input_label_percent"
            android:drawableEnd="@drawable/ic_action_remove"
            android:drawableRight="@drawable/ic_action_remove"
            android:ems="10"
            android:hint="@string/drink_input_hint_percent"
            android:inputType="numberDecimal" />

    </RelativeLayout>
</ScrollView>
